--- a/Resquirrelly/App.xaml
+++ b/Resquirrelly/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Resquirrelly.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Exit="OnExit">
     <Application.Resources>
          
     </Application.Resources>
